[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/VictoryZone.gd" type="Script" id=1]
[ext_resource path="res://Platforms.png" type="Texture" id=2]
[ext_resource path="res://light.png" type="Texture" id=3]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.7705, 14.1913 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -4.60136, 11.0201, -9.79979, 10.1726, -12.2295, 11.1895, -9.29125, 12.037 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 15.2883, 11.359, 10.0334, 9.72069, 5.39997, 11.1331, 10.2029, 12.6019 )

[sub_resource type="Animation" id=2]
resource_name = "portal"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="VictoryZone" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="ChangingScene" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1, -14.667 )
rotation = 3.14047
scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -24 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 12, 36, 75, 64 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0.396852, -17.7986 )
scale = Vector2( 4.12958, 4.18581 )
texture = ExtResource( 3 )
shadow_enabled = true
shadow_color = Color( 0.835294, 0.00392157, 0.00392157, 1 )
shadow_gradient_length = 616.6
shadow_filter_smooth = 20.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( -2.38419e-06, -18.4931 )
scale = Vector2( 2.34375, 2.34418 )
occluder = SubResource( 5 )

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
position = Vector2( -2.38419e-06, -18.4931 )
scale = Vector2( 2.34375, 2.34418 )
occluder = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/portal = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_VictoryZone_body_entered"]
[connection signal="timeout" from="ChangingScene" to="." method="_on_ChangingScene_timeout"]
